# oss-taapp

./: .dockerignore  .env.example  .fernet_key  .gitignore  .oauth_state  .pre-commit-config.yaml  .pyproject.toml.swp  CIRCLECI_MYPY_FIX.md  CONTRIBUTING.md  DESIGN.md  Discord.md  Dockerfile  FIXED_SERVICE_NOT_FOUND.md  HW2-Test-Results.md  MONITORING_GUIDE.md  MONITORING_QUICK_START.md  PHASE1_INTEGRATION.md  PROMETHEUS_GRAFANA_SETUP.md  QUICK_START.md  README.md  SUMMARY.md  TELEMETRY_IMPLEMENTATION_SUMMARY.md  TELEMETRY_QUICK_REFERENCE.md  TESTING.md  TEST_GAPS.md  TEST_IMPROVEMENTS.md  TEST_RESULTS.md  api.py  build-and-push.sh  discord_auth.db  discord_service_openapi.json  docker-compose.monitoring.yml  docker-compose.yml  generate_discord_auth_url.py  generate_discord_openapi.py  get_oauth_code.py  main.py  mkdocs.yml  pyproject.toml  quick_gen_openapi.py  (+16 more)
.circleci/: config.yml
src/ai_api/: __init__.py  pyproject.toml
src/ai_api/src/ai_api/: __init__.py  ai_interface.py
src/claude_client_impl/: .fernet_key  pyproject.toml
src/claude_client_impl/src/claude_client_impl/: __init__.py  ai_client.py  errors.py  response.py  storage.py
src/claude_client_impl/src/claude_client_service/: pyproject.toml
src/claude_client_impl/tests/: __init__.py  conftest.py  test_ai_client_impl.py  test_response.py  test_storage.py
src/clients/: README.md  pyproject.toml
src/clients/discord_client_service_client/: README.md  __init__.py  client.py  pyproject.toml
src/clients/discord_client_service_client/api/default/: auth_status_auth_status_user_id_get.py  delete_message_user_id_channels_channel_id_messages_message_id_delete.py  get_channel_user_id_channels_channel_id_get.py  get_channels_user_id_channels_get.py  get_messages_user_id_channels_channel_id_messages_get.py  health_check_health_get.py  oauth_callback_auth_callback_post.py  oauth_login_auth_login_get.py  oauth_logout_auth_logout_user_id_delete.py  send_message_user_id_channels_channel_id_messages_post.py
src/clients/discord_client_service_client/discord_client_service_client/: __init__.py  client.py
src/clients/discord_client_service_client/discord_client_service_client/models/: __init__.py  auth_status_auth_status_guild_id_get_response_auth_status_auth_status_guild_id_get.py  channel_info.py  channel_list_response.py  health_check_health_get_response_health_check_health_get.py  http_validation_error.py  message_detail.py  message_list_response.py  send_message_request.py
src/clients/discord_client_service_client/models/: __init__.py  auth_status_auth_status_user_id_get_response_auth_status_auth_status_user_id_get.py  channel_info.py  channel_list_response.py  http_validation_error.py  message_detail.py  message_list_response.py  o_auth_callback_request.py  o_auth_callback_response.py  o_auth_init_response.py  operation_response.py  send_message_request.py
src/clients/mail_client_service_client/: __init__.py  types.py
src/clients/mail_client_service_client/api/default/: delete_message_messages_message_id_delete.py  get_message_messages_message_id_get.py  get_messages_messages_get.py  health_check_health_get.py  mark_as_read_messages_message_id_mark_as_read_post.py
src/clients/mail_client_service_client/models/: __init__.py  message_detail.py  messages_response.py  messages_response_messages.py  messages_response_messages_additional_property.py  operation_response.py
src/hw3/claude_client_service/: pyproject.toml
src/hw3/claude_client_service/src/claude_client_service/: ai_interface_impl.py
src/hw3/openai_client_service/: pyproject.toml
src/hw3/openai_client_service/src/openai_client_service/: ai_interface_impl.py
src/hw3/ospsd_service/: pyproject.toml
src/hw3/ospsd_service/src/ospsd_service/: main.py  metrics.py  ticket_tools.py
src/hw3/telemetry_impl/: pyproject.toml
src/hw3/telemetry_impl/src/telemetry_impl/: __init__.py
src/hw3/telemetry_impl/tests/: test_integration.py  test_telemetry.py
src/kanban_client_api/: README.md  pyproject.toml
src/kanban_client_api/src/kanban_client_api/: __init__.py  client.py  exceptions.py  models.py
src/kanban_client_api/tests/: test_kanban_client_api.py
src/openai_adapter/: __init__.py  pyproject.toml
src/openai_adapter/src/openai_adapter/: __init__.py  _adapter.py
src/openai_adapter/tests/: __init__.py  test_adapter.py
src/openai_client_impl/: __init__.py  pyproject.toml
src/openai_client_impl/src/openai_client_impl/: __init__.py  ai_client.py  errors.py  response.py  storage.py
src/openai_client_impl/tests/: __init__.py  conftest.py  test_ai_client_impl.py  test_response.py  test_storage.py
src/openai_client_service/: __init__.py  main.py  pyproject.toml
src/openai_client_service/routes/: __init__.py
src/openai_client_service/src/: __init__.py
src/openai_client_service/src/openai_client_service/: __init__.py  ai_interface_impl.py  dependencies.py  main.py
src/openai_client_service/tests/: __init__.py  test_ai_routes.py  test_dependencies.py  test_oauth_routes.py
src/openai_service_api/: __init__.py  pyproject.toml
src/openai_service_api/src/: __init__.py
src/openai_service_api/src/openai_service_api/: __init__.py  client.py  response.py
src/ospsd_service/: README.md  pyproject.toml
src/ospsd_service/src/ospsd_service/: __init__.py  main.py  prometheus_metrics.py  ticket_handlers.py  ticket_tools.py
src/services/mail_client_service/: README.md  __init__.py  pyproject.toml
src/services/mail_client_service/tests/: test_api.py  test_api_additional.py  test_fake_mail.py  test_mcp.py
src/shared_telemetry/: README.md  __init__.py  metrics.py  middleware.py  pyproject.toml
src/trello_client_impl/: README.md  oauth.py  pyproject.toml
src/trello_client_impl/src/trello_client_impl/: __init__.py  models.py  oauth.py  trello_impl.py
src/trello_client_impl/tests/: test_oauth.py  test_trello_impl.py
src/trello_ticket_impl/: pyproject.toml
src/trello_ticket_impl/src/trello_ticket_impl/: __init__.py  exceptions.py  models.py  trello_ticket_impl.py
src/trello_ticket_impl/tests/: conftest.py  test_trello_ticket_impl.py
(+187 files in other folders)
