[project]
name = "ta-assignment"
version = "0.1.0"
description = "Template repository for a mail client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "fastmcp>=2.12.4",
    "fastapi>=0.118.0",
    "fastapi[standard]",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "authlib>=1.3.0",
    "cryptography>=42.0.0",
    "greenlet>=3.0.0",
    "openai>=1.40.0",
    "python-dotenv",
    "itsdangerous",
    "pydantic>=2",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "google-api-python-client-stubs>=1.30.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "mypy>=1.17.0",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=v1.2.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.15.0",
    "respx>=0.22.0",
    "ruff>=0.12.7",
    "types-requests>=2.32.4.20250611",
    "pre-commit>=4.3.0",
    "pre-commit-uv>=4.2.0",
]

[tool.uv.workspace]
members = [
  "src/mail_client_api",
  "src/gmail_client_impl",
  "src/services/mail_client_service",
  "src/clients",
  "src/clients/discord_client_service_client",
  "src/mail_client_service_adapter",
  "src/chat_client_api",
  "src/discord_client_impl",
  "src/services/discord_client_service",
  "src/discord_client_service_adapter",
  "src/ai_api",
  "src/openai_service_api",
  "src/openai_client_impl",
  "src/openai_client_service",
  "src/openai_client_service_api_client",
  "src/openai_adapter",
  "src/ospsd_service",
]

[tool.ruff]
line-length = 130 # high for top level due to tests
target-version = "py311"
extend-exclude = [
  "view_db.py",
  "get_oauth_code.py",
  "test_real_callback.py",
  "test_callback.py",
  "src/clients/discord_client_service_client/**",
  "src/openai_client_service_api_client/**",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", # `incorrect-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `incorrect-blank-line-before-class`.
  "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`.
  "FAST001", # 'fast-api-redundant-response-model' (FAST001) we want to specify the response model explicitly
  "FAST002", # 'fast-api-non-annotated-dependency' (FAST002) we want to use Depends for route dependencies
  "TRY301", # 'raise-within-try' (TRY301) we need to raise an exception within try in FastAPI to return non-200 status codes
  "S101", # Use of `assert` detected --> Asserts are good in our opinion. Tests use asserts profusely.
  "G004", # Allow logging statements to use f-string
  "COM812", # Checks for the absence of trailing commas (not compatible with ruff format)
]
[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "TRY300", "TRY003", "EM102", "SIM110", "E402", "PLR2004", "ARG001", "ARG002", "S106", "INP001", "BLE001", "ANN401",
    "SLF001", "E501", "S105", "PLC0415", "PT011"
]


[tool.mypy]
strict = true
explicit_package_bases = true # Required for src layout
mypy_path = [
    "src/mail_client_service_adapter/src",
    "src/mail_client_api/src",
    "src/gmail_client_impl/src",
    "src/services/mail_client_service/src",
    "src/clients",
    "src/chat_client_api/src",
    "src/discord_client_impl/src",
    "src/services/discord_client_service/src",
    "src/discord_client_service_adapter/src"
]
exclude = [
    "src/ai_api/",
    "src/openai_service_api/",
    "src/openai_adapter/",
    "src/openai_client_impl/",
    "src/openai_client_service/",
    "src/openai_client_service_api_client/"
]
ignore_missing_imports = false
warn_unused_ignores = false

# Allow untyped imports for specific modules
[[tool.mypy.overrides]]
module = [
    "google.*",
    "googleapiclient.*",
    "alembic.*",
    "authlib.*",
    "openai",
    "openai.*",
]
ignore_missing_imports = true

# Ignore auto-generated client code and AI modules
[[tool.mypy.overrides]]
module = [
    "discord_client_service_client.*",
    "mail_client_service_client.*",
    "openai_client_service_api_client.*",
]
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    ".", 
    "src"
]
testpaths = ["tests", "src/*/tests", "src/**/tests"]
addopts = ["--cov", "--cov-report=term-missing", "--import-mode=importlib"]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (medium speed, real dependencies)",
    "e2e: marks tests as end-to-end tests (slow, full system)",
    "circleci: marks tests that can run in CI/CD environments without local credentials",
    "local_credentials: marks tests that require local credentials.json or token.json files",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "src/clients/mail_client_service_client/**",
    "src/clients/discord_client_service_client/**",
    "src/openai_client_service_api_client/**",
    "src/openai_client_service/main.py",
    "src/openai_client_service/__init__.py",
]

[tool.coverage.report]
fail_under = 85 # Justification: A high threshold ensures most code is tested.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "ruff>=0.13.2",
]
