[project]
name = "ai-api"
version = "0.1.0"
description = "Abstract interfaces for AI APIs"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = []

