[project]
name = "claude-client-impl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "sqlalchemy>=2",
  "cryptography",
  "python-dotenv",
  "itsdangerous",
  "ai-service-api",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_client_impl"]

[tool.uv.sources]
ai-service-api = { workspace = true }
