[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai-client-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "authlib",
  "httpx",
  "pydantic>=2",
  "python-dotenv",
  "openai-client-impl",
  "openai>=1.40.0",
  "ai-api",
  "shared-telemetry",
]

[tool.uv.sources]
openai-client-impl = { workspace = true }
ai-api = { workspace = true }
shared-telemetry = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/openai_client_service"]
