[project]
name = "ai-service-api"
version = "0.1.0"
description = "Abstract API for AI service operations"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_service_api"]

[tool.ruff]
line-length = 100  # Default formatting width
target-version = "py311"  # Adjust based on actual Python version
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

