[project]
name = "ospsd-service"
version = "0.1.0"
description = "Service integrating AI, chat, and tickets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.34.0",
    "discord-client-impl",
    "chat-client-api",
    "openai-client-impl",
    "ai-service-api",
    "tickets-api",
    "trello-ticket-impl",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = ["--cov", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.uv.sources]
discord-client-impl = { workspace = true }
chat-client-api = { workspace = true }
openai-client-impl = { workspace = true }
ai-service-api = { workspace = true }
trello-ticket-impl = { workspace = true }
tickets-api = { workspace = true }
