[project]
name = "shared-telemetry"
version = "0.1.0"
description = "Shared telemetry utilities for all services"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "prometheus-client>=0.23.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared_telemetry"]

