[project]
name = "trello-ticket-impl"
version = "1.0.0"
description = "Trello implementation of the Ticket API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tickets-api",
    "aiohttp>=3.11.18",
]

[tool.uv.sources]
tickets-api = { workspace = true }

[dependency-groups]
dev = []

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff]
extend = "../../pyproject.toml"
