[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai-client-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "python-dotenv",
  "openai>=1.40.0",
  "ai-api",
]

[tool.uv.sources]
ai-api = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/hw3/openai_client_service"]
