[project]
name = "telemetry-impl"
version = "0.1.0"
description = "In-memory telemetry implementation"
requires-python = ">=3.11"
dependencies = [
    "telemetry-api",
]

[tool.uv.sources]
telemetry-api = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
