[project]
name = "mail-client-service"
version = "0.1.0"
description = "FastAPI service wrapper for mail client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "gmail-client-impl",
    "mail-client-api",
    "uvicorn>=0.34.0",
    "shared-telemetry",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.1",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = ["--cov=mail_client_service", "--cov-report=term-missing"]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (medium speed, real dependencies)",
]

[tool.coverage.run]
source = ["src/mail_client_service"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 78  # Adjusted for thin wrapper with error handling paths
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "raise HTTPException",
    "logger.exception",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mail-client-api = { workspace = true }
gmail-client-impl = { workspace = true }
shared-telemetry = { workspace = true }
